objects/AcctSeed__Bank_Adjustment__c.object
<CustomObject>
    <description>Used in the bank acount reconciliation process to set or adjust bank account balance.</description>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
        <label>Bank Reconciliation</label>
        <referenceTo>AcctSeed__Bank_Reconciliation__c</referenceTo>
        <relationshipLabel>Bank Adjustments</relationshipLabel>
        <relationshipName>Bank_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Adjustment</label>
    <nameField>
        <displayFormat>BankAdjustment-{0000000000}</displayFormat>
        <label>Bank Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>